[package]
name = "ark-groth16-batch-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false, features = ["asm"] }
ark-groth16 = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.1", default-features = false }
ark-transcript = { version = "0.0.5", default-features = false }

[dev-dependencies]
ark-bls12-381 = "0.5.0"
ark-snark = "0.5.1"
ark-std = "0.5.0"
